--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -1726,7 +1726,7 @@
             "description_width": ""
           }
         },
-        "ce1d02774f534d51aef075cadf4dd606": {
+        "af236084cde8427b9fd3075a241aa845": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -1741,14 +1741,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_5081941d30674c5a82a0c93c68df7c42",
-              "IPY_MODEL_b52c3a497a0b4460a522de1164d12f63",
-              "IPY_MODEL_e8229f5c764e4d1b913d3ba967a6a802"
+              "IPY_MODEL_91b5c0bc01de4bbb9b05f964c7316188",
+              "IPY_MODEL_63c608eb724b4498886384cb284b61e1",
+              "IPY_MODEL_8723d169ecc3421198c87c0ccb48abc7"
             ],
-            "layout": "IPY_MODEL_196eabe52a3c4c1f81fd249f843801dc"
+            "layout": "IPY_MODEL_cdef8b6231314ee98b8558e5145fbdb0"
           }
         },
-        "5081941d30674c5a82a0c93c68df7c42": {
+        "91b5c0bc01de4bbb9b05f964c7316188": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1763,13 +1763,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_b3e0896b650d43bab5fadafdd784150b",
+            "layout": "IPY_MODEL_532e01f5f5c4466083dd2a73cb851b93",
             "placeholder": "​",
-            "style": "IPY_MODEL_5ad522c849bf47ae890d7c11f2317aaa",
-            "value": "100%"
+            "style": "IPY_MODEL_fc13ba81d9e147a5abb36878e5197f98",
+            "value": " 14%"
           }
         },
-        "b52c3a497a0b4460a522de1164d12f63": {
+        "63c608eb724b4498886384cb284b61e1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -1782,18 +1782,18 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "success",
+            "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_a49fb950e7f54b8798c303b35dd4caf3",
+            "layout": "IPY_MODEL_709fb0eee7ae4f258f16f0ca9637a5ee",
             "max": 7943,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_f3136dcd8094412092b35d0a3d2a780d",
-            "value": 7943
+            "style": "IPY_MODEL_1e8faab490e54b83ab725a7bdd5b48bc",
+            "value": 1128
           }
         },
-        "e8229f5c764e4d1b913d3ba967a6a802": {
+        "8723d169ecc3421198c87c0ccb48abc7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1808,13 +1808,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_add51dcb777c4cd3a7587b68bc1d15ec",
+            "layout": "IPY_MODEL_418dc57a9005418da7ac8719d83e4c65",
             "placeholder": "​",
-            "style": "IPY_MODEL_bca53e750ced40f5b21e677082082fe1",
-            "value": " 7943/7943 [00:07&lt;00:00, 783.24it/s]"
+            "style": "IPY_MODEL_0e244eb584b5440faaac0cb4e7552315",
+            "value": " 1128/7943 [01:34&lt;14:03,  8.08it/s]"
           }
         },
-        "196eabe52a3c4c1f81fd249f843801dc": {
+        "cdef8b6231314ee98b8558e5145fbdb0": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1866,7 +1866,7 @@
             "width": null
           }
         },
-        "b3e0896b650d43bab5fadafdd784150b": {
+        "532e01f5f5c4466083dd2a73cb851b93": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1918,7 +1918,7 @@
             "width": null
           }
         },
-        "5ad522c849bf47ae890d7c11f2317aaa": {
+        "fc13ba81d9e147a5abb36878e5197f98": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1933,7 +1933,7 @@
             "description_width": ""
           }
         },
-        "a49fb950e7f54b8798c303b35dd4caf3": {
+        "709fb0eee7ae4f258f16f0ca9637a5ee": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1985,7 +1985,7 @@
             "width": null
           }
         },
-        "f3136dcd8094412092b35d0a3d2a780d": {
+        "1e8faab490e54b83ab725a7bdd5b48bc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -2001,7 +2001,7 @@
             "description_width": ""
           }
         },
-        "add51dcb777c4cd3a7587b68bc1d15ec": {
+        "418dc57a9005418da7ac8719d83e4c65": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -2053,7 +2053,7 @@
             "width": null
           }
         },
-        "bca53e750ced40f5b21e677082082fe1": {
+        "0e244eb584b5440faaac0cb4e7552315": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -3945,22 +3945,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "ce1d02774f534d51aef075cadf4dd606",
-            "5081941d30674c5a82a0c93c68df7c42",
-            "b52c3a497a0b4460a522de1164d12f63",
-            "e8229f5c764e4d1b913d3ba967a6a802",
-            "196eabe52a3c4c1f81fd249f843801dc",
-            "b3e0896b650d43bab5fadafdd784150b",
-            "5ad522c849bf47ae890d7c11f2317aaa",
-            "a49fb950e7f54b8798c303b35dd4caf3",
-            "f3136dcd8094412092b35d0a3d2a780d",
-            "add51dcb777c4cd3a7587b68bc1d15ec",
-            "bca53e750ced40f5b21e677082082fe1"
+            "af236084cde8427b9fd3075a241aa845",
+            "91b5c0bc01de4bbb9b05f964c7316188",
+            "63c608eb724b4498886384cb284b61e1",
+            "8723d169ecc3421198c87c0ccb48abc7",
+            "cdef8b6231314ee98b8558e5145fbdb0",
+            "532e01f5f5c4466083dd2a73cb851b93",
+            "fc13ba81d9e147a5abb36878e5197f98",
+            "709fb0eee7ae4f258f16f0ca9637a5ee",
+            "1e8faab490e54b83ab725a7bdd5b48bc",
+            "418dc57a9005418da7ac8719d83e4c65",
+            "0e244eb584b5440faaac0cb4e7552315"
           ]
         },
-        "outputId": "06625354-4847-4acb-e1b8-73590b110de6"
+        "outputId": "1aa1b057-5023-410d-a2e6-95d30ac9c443"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3971,7 +3971,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "ce1d02774f534d51aef075cadf4dd606"
+              "model_id": "af236084cde8427b9fd3075a241aa845"
             }
           },
           "metadata": {}
@@ -4156,20 +4156,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Respostas às Perguntas\n",
+        "## Questões relacionadas às competências\n",
         "\n",
-        "Aqui estão as respostas às perguntas sobre o notebook:\n",
-        "\n",
-        "**Tokenização, Stemming e Lematização:**\n",
+        "**Implementar técnicas de lematização:**\n",
         "\n",
         "*   **Qual o endereço do seu notebook (colab) executado? Use o botão de compartilhamento do colab para obter uma url.**\n",
-        "    [PREENCHA O ENDEREÇO DO SEU NOTEBOOK AQUI]\n",
+        "    https://colab.research.google.com/github/ronaldobresende/folhauol-text-mining/blob/main/Question%C3%A1rio_Projeto_de_Disciplina_de_Text_Mining.ipynb\n",
         "\n",
         "*   **Em qual célula está o código que realiza o download dos pacotes necessários para tokenização e stemming usando nltk?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 07\n",
         "\n",
         "*   **Em qual célula está o código que atualiza o spacy e instala o pacote pt_core_news_lg?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 06\n",
         "\n",
         "*   **Em qual célula está o download dos dados diretamente do kaggle?**\n",
         "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
