--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -1766,7 +1766,7 @@
             "layout": "IPY_MODEL_532e01f5f5c4466083dd2a73cb851b93",
             "placeholder": "​",
             "style": "IPY_MODEL_fc13ba81d9e147a5abb36878e5197f98",
-            "value": " 14%"
+            "value": " 35%"
           }
         },
         "63c608eb724b4498886384cb284b61e1": {
@@ -1790,7 +1790,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_1e8faab490e54b83ab725a7bdd5b48bc",
-            "value": 1128
+            "value": 2770
           }
         },
         "8723d169ecc3421198c87c0ccb48abc7": {
@@ -1811,7 +1811,7 @@
             "layout": "IPY_MODEL_418dc57a9005418da7ac8719d83e4c65",
             "placeholder": "​",
             "style": "IPY_MODEL_0e244eb584b5440faaac0cb4e7552315",
-            "value": " 1128/7943 [01:34&lt;14:03,  8.08it/s]"
+            "value": " 2770/7943 [03:56&lt;12:18,  7.00it/s]"
           }
         },
         "cdef8b6231314ee98b8558e5145fbdb0": {
@@ -4170,16 +4170,16 @@
         "    Célula 06\n",
         "\n",
         "*   **Em qual célula está o download dos dados diretamente do kaggle?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 04\n",
         "\n",
         "*   **Em qual célula está a criação do dataframe news_2016 (com examente 7943 notícias)?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 09\n",
         "\n",
         "*   **Em qual célula está a função que tokeniza e realiza o stemming dos textos usando funções do nltk?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 10\n",
         "\n",
         "*   **Em qual célula está a função que realiza a lematização usando o spacy?**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 12\n",
         "\n",
         "*   **Baseado nos resultados qual a diferença entre stemming e lematização, qual a diferença entre os dois procedimentos? Escolha quatro palavras para exemplificar.**\n",
         "    **Diferença Principal:** A lematização tenta encontrar a forma base (lema) de uma palavra, que é uma palavra real em um dicionário (ex: \"correndo\" -> \"correr\"). O stemming, por outro lado, simplesmente remove sufixos e prefixos para encontrar a raiz da palavra, que pode não ser uma palavra real (ex: \"correndo\" -> \"corr\"). A lematização geralmente é mais precisa, mas também mais computacionalmente custosa.\n",
