--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -1766,7 +1766,7 @@
             "layout": "IPY_MODEL_532e01f5f5c4466083dd2a73cb851b93",
             "placeholder": "​",
             "style": "IPY_MODEL_fc13ba81d9e147a5abb36878e5197f98",
-            "value": " 35%"
+            "value": " 77%"
           }
         },
         "63c608eb724b4498886384cb284b61e1": {
@@ -1790,7 +1790,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_1e8faab490e54b83ab725a7bdd5b48bc",
-            "value": 2770
+            "value": 6091
           }
         },
         "8723d169ecc3421198c87c0ccb48abc7": {
@@ -1811,7 +1811,7 @@
             "layout": "IPY_MODEL_418dc57a9005418da7ac8719d83e4c65",
             "placeholder": "​",
             "style": "IPY_MODEL_0e244eb584b5440faaac0cb4e7552315",
-            "value": " 2770/7943 [03:56&lt;12:18,  7.00it/s]"
+            "value": " 6091/7943 [08:41&lt;03:50,  8.05it/s]"
           }
         },
         "cdef8b6231314ee98b8558e5145fbdb0": {
@@ -2707,7 +2707,7 @@
         "id": "bce0QMD9Cd2N",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 311
         },
         "outputId": "e064ffea-e5c7-4acf-e6c8-3e4ee17d16d6"
       },
@@ -4006,7 +4006,7 @@
         "id": "M_qmqn2j6bCI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 211
+          "height": 219
         },
         "outputId": "428f2856-d302-42d5-a497-c13fc6d823fa"
       },
@@ -4201,11 +4201,11 @@
         "**Construir um modelo de reconhecimento de entidades (NER) usando Spacy**\n",
         "\n",
         "*   **Em qual célula o modelo pt_core_news_lg está sendo carregado? Todos os textos do dataframe precisam ser analisados usando os modelos carregados. Em qual célula isso foi feito?**\n",
-        "    Carregamento do modelo: Célula [PREENCHA O NÚMERO DA CÉLULA]\n",
-        "    Análise dos textos: Célula [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Carregamento do modelo pt_core_news_lg: Célula 11\n",
+        "    Análise dos textos com os modelos carregados: Célula 12\n",
         "\n",
         "*   **Indique a célula onde as entidades dos textos foram extraídas. Estamos interessados apenas nas organizações.**\n",
-        "    Célula: [PREENCHA O NÚMERO DA CÉLULA]\n",
+        "    Célula 13\n",
         "\n",
         "*   **Cole a figura gerada que mostra a nuvem de entidades para cada tópico obtido (no final do notebook)**\n",
         "    [COLE A IMAGEM DA NUVEM DE ENTIDADES AQUI. VOCÊ PODE FAZER ISSO FAZENDO UPLOAD DA IMAGEM NA CÉLULA DE TEXTO.]\n",
