--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -1766,7 +1766,7 @@
             "layout": "IPY_MODEL_532e01f5f5c4466083dd2a73cb851b93",
             "placeholder": "​",
             "style": "IPY_MODEL_fc13ba81d9e147a5abb36878e5197f98",
-            "value": " 77%"
+            "value": " 93%"
           }
         },
         "63c608eb724b4498886384cb284b61e1": {
@@ -1790,7 +1790,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_1e8faab490e54b83ab725a7bdd5b48bc",
-            "value": 6091
+            "value": 7363
           }
         },
         "8723d169ecc3421198c87c0ccb48abc7": {
@@ -1811,7 +1811,7 @@
             "layout": "IPY_MODEL_418dc57a9005418da7ac8719d83e4c65",
             "placeholder": "​",
             "style": "IPY_MODEL_0e244eb584b5440faaac0cb4e7552315",
-            "value": " 6091/7943 [08:41&lt;03:50,  8.05it/s]"
+            "value": " 7363/7943 [10:37&lt;00:40, 14.40it/s]"
           }
         },
         "cdef8b6231314ee98b8558e5145fbdb0": {
@@ -4208,7 +4208,7 @@
         "    Célula 13\n",
         "\n",
         "*   **Cole a figura gerada que mostra a nuvem de entidades para cada tópico obtido (no final do notebook)**\n",
-        "    [COLE A IMAGEM DA NUVEM DE ENTIDADES AQUI. VOCÊ PODE FAZER ISSO FAZENDO UPLOAD DA IMAGEM NA CÉLULA DE TEXTO.]\n",
+        "    A figura gerada que mostra a nuvem de entidades para cada tópico obtido foi plotada na Célula 19\n",
         "\n",
         "**Criar modelos utilizando vetorização de textos baseado em Bag of Words**\n",
         "\n",
