--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -3367,51 +3367,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# #Célula 14\n",
-        "# class Vectorizer:\n",
-        "#   def __init__(self, doc_tokens: List):\n",
-        "#     self.doc_tokens = doc_tokens\n",
-        "#     self.tfidf = None\n",
-        "\n",
-        "\n",
-        "#   def vectorizer(self):\n",
-        "#       \"\"\"\n",
-        "#       Convert a list of tokens to tfidf vector\n",
-        "#       Returns the tfidf vector and attribute it to self.tfidf\n",
-        "#       \"\"\"\n",
-        "#       # Escreva seu código aqui\n",
-        "#       # Transformar listas de tokens em strings (TFIDF exige string de texto)\n",
-        "#       docs = [\" \".join(tokens) for tokens in self.doc_tokens]\n",
-        "\n",
-        "#       # Instanciar e ajustar o TfidfVectorizer\n",
-        "#       self.tfidf = TfidfVectorizer(\n",
-        "#           lowercase=True,\n",
-        "#           stop_words=list(complete_stopwords),\n",
-        "#           max_features=5000,\n",
-        "#           min_df=10,\n",
-        "#           max_df=0.95,\n",
-        "#           tokenizer=str.split  # já estamos passando strings tokenizadas\n",
-        "#       ).fit(docs)\n",
-        "\n",
-        "#       return self.tfidf\n",
-        "\n",
-        "#   def __call__(self):\n",
-        "#     if self.tfidf is None:\n",
-        "#         self.vectorizer()\n",
-        "#     return self.tfidf\n",
-        "\n",
-        "# doc_tokens = news_2016.spacy_lemma.values.tolist()\n",
-        "# vectorizer = Vectorizer(doc_tokens)\n",
-        "\n",
-        "# def tokens2tfidf(tokens):\n",
-        "#     tokens = ' '.join(tokens)\n",
-        "#     array =  vectorizer().transform([tokens]).toarray()[0]\n",
-        "#     return array\n",
-        "\n",
-        "\n",
-        "# news_2016.loc[:, 'tfidf'] = news_2016.spacy_lemma.progress_map(tokens2tfidf)\n",
-        "# CÉLULA 14\n",
-        "\n",
+        "#Célula 14\n",
         "class Vectorizer:\n",
         "  def __init__(self, doc_tokens: List):\n",
         "    self.doc_tokens = doc_tokens\n",
@@ -3423,14 +3379,20 @@
         "      Convert a list of tokens to tfidf vector\n",
         "      Returns the tfidf vector and attribute it to self.tfidf\n",
         "      \"\"\"\n",
+        "      # Escreva seu código aqui\n",
+        "      # Transformar listas de tokens em strings (TFIDF exige string de texto)\n",
+        "      docs = [\" \".join(tokens) for tokens in self.doc_tokens]\n",
+        "\n",
+        "      # Instanciar e ajustar o TfidfVectorizer\n",
         "      self.tfidf = TfidfVectorizer(\n",
         "          lowercase=True,\n",
         "          stop_words=list(complete_stopwords),\n",
+        "          max_features=5000,\n",
         "          min_df=10,\n",
         "          max_df=0.95,\n",
-        "          max_features=5000\n",
-        "      )\n",
-        "      self.tfidf.fit([' '.join(tokens) for tokens in self.doc_tokens])\n",
+        "          tokenizer=str.split  # já estamos passando strings tokenizadas\n",
+        "      ).fit(docs)\n",
+        "\n",
         "      return self.tfidf\n",
         "\n",
         "  def __call__(self):\n",
@@ -3447,7 +3409,7 @@
         "    return array\n",
         "\n",
         "\n",
-        "news_2016.loc[:, 'tfidf'] = news_2016.spacy_lemma.progress_map(tokens2tfidf)"
+        "news_2016.loc[:, 'tfidf'] = news_2016.spacy_lemma.progress_map(tokens2tfidf)\n"
       ],
       "metadata": {
         "id": "ucwxtHrBmAqu",
@@ -3972,18 +3934,6 @@
       "cell_type": "code",
       "source": [
         "# #Célula 16\n",
-        "# def get_topic(tfidf: np.array):\n",
-        "#     \"\"\"\n",
-        "#     Get topic for a lda trained model\n",
-        "#     \"\"\"\n",
-        "#     # Escreva seu código aqui\n",
-        "#     dtm = pd.DataFrame([tfidf], columns=vectorizer.tfidf.get_feature_names_out())\n",
-        "#     topics = lda.transform(dtm.values)\n",
-        "#     return np.argmax(topics, axis=1)[0]\n",
-        "#     #topic_distribution = lda.transform([tfidf])[0]\n",
-        "#     #return int(np.argmax(topic_distribution))\n",
-        "\n",
-        "# news_2016['topic'] = news_2016.tfidf.progress_map(get_topic)\n",
         "def get_topic(tfidf: np.array):\n",
         "    \"\"\"\n",
         "    Get topic for a lda trained model\n",
