--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -2154,7 +2154,7 @@
         "id": "pJ7IIZV8KBd-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 88
         },
         "outputId": "735b54ee-3ba3-484b-e371-fc8111e2db51"
       },
@@ -4206,9 +4206,10 @@
         "\n",
         "    A nuvem de palavras para cada um dos 9 tópicos criados foi plotada na Célula 18\n",
         "\n",
-        "*   **17. Escreva brevemente uma descrição para cada tópico.**\n",
-        "    *   Tópico 1: [ESCREVA A DESCRIÇÃO DO TÓPICO 1 AQUI]\n",
-        "    *   Tópico 2: [ESCREVA A DESCRIÇÃO DO TÓPICO 2 AQUI]\n",
+        "*   **17. Escreva brevemente uma descrição para cada tópico extraído. Indique se você considera o tópico extraído semanticamente consistente ou não. **\n",
+        "    *   Tópico 1: parece focar na relação entre usuários, serviços online, empresas e o mercado digital. Termos como \"usuário\", \"serviço\", \"mídia\", \"empresa\", \"aplicativo\", \"venda\" e \"Facebook\" são proeminentes. Os termos se agrupam bem em torno do tema de interação digital e negócios, me parece consistente\n",
+        "    \n",
+        "    *   Tópico 2: aborda conceitos econômicos, com ênfase em \"renda fixa\", \"fundo de renda\", \"taxa básica de juros\" (Selic) e associações financeiras (\"Anefac\"). Parece consistente, já que os termos são claramente relacionados ao setor financeiro e investimentos\n",
         "    *   Tópico 3: [ESCREVA A DESCRIÇÃO DO TÓPICO 3 AQUI]\n",
         "    *   Tópico 4: [ESCREVA A DESCRIÇÃO DO TÓPICO 4 AQUI]\n",
         "    *   Tópico 5: [ESCREVA A DESCRIÇÃO DO TÓPICO 5 AQUI]\n",
