--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -4210,8 +4210,8 @@
         "    *   Tópico 1: parece focar na relação entre usuários, serviços online, empresas e o mercado digital. Termos como \"usuário\", \"serviço\", \"mídia\", \"empresa\", \"aplicativo\", \"venda\" e \"Facebook\" são proeminentes. Os termos se agrupam bem em torno do tema de interação digital e negócios, me parece consistente\n",
         "    \n",
         "    *   Tópico 2: aborda conceitos econômicos, com ênfase em \"renda fixa\", \"fundo de renda\", \"taxa básica de juros\" (Selic) e associações financeiras (\"Anefac\"). Parece consistente, já que os termos são claramente relacionados ao setor financeiro e investimentos\n",
-        "    *   Tópico 3: [ESCREVA A DESCRIÇÃO DO TÓPICO 3 AQUI]\n",
-        "    *   Tópico 4: [ESCREVA A DESCRIÇÃO DO TÓPICO 4 AQUI]\n",
+        "    *   Tópico 3: Este tópico parece tratar de discussões sobre o papel do \"governo\" e das \"empresas\" no \"mercado\", incluindo termos como \"dizer\", \"haver\" e \"ser\", que podem indicar análises ou debates sobre esses atores. Não me parece ser tão consistente já que as palavras não remetem há um assunto bem claramente.\n",
+        "    *   Tópico 4: Ficou vazio\n",
         "    *   Tópico 5: [ESCREVA A DESCRIÇÃO DO TÓPICO 5 AQUI]\n",
         "    *   Tópico 6: [ESCREVA A DESCRIÇÃO DO TÓPICO 6 AQUI]\n",
         "    *   Tópico 7: [ESCREVA A DESCRIÇÃO DO TÓPICO 7 AQUI]\n",
