--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -4212,10 +4212,14 @@
         "    *   Tópico 2: aborda conceitos econômicos, com ênfase em \"renda fixa\", \"fundo de renda\", \"taxa básica de juros\" (Selic) e associações financeiras (\"Anefac\"). Parece consistente, já que os termos são claramente relacionados ao setor financeiro e investimentos\n",
         "    *   Tópico 3: Este tópico parece tratar de discussões sobre o papel do \"governo\" e das \"empresas\" no \"mercado\", incluindo termos como \"dizer\", \"haver\" e \"ser\", que podem indicar análises ou debates sobre esses atores. Não me parece ser tão consistente já que as palavras não remetem há um assunto bem claramente.\n",
         "    *   Tópico 4: Ficou vazio\n",
-        "    *   Tópico 5: [ESCREVA A DESCRIÇÃO DO TÓPICO 5 AQUI]\n",
-        "    *   Tópico 6: [ESCREVA A DESCRIÇÃO DO TÓPICO 6 AQUI]\n",
-        "    *   Tópico 7: [ESCREVA A DESCRIÇÃO DO TÓPICO 7 AQUI]\n",
-        "    *   Tópico 8: [ESCREVA A DESCRIÇÃO DO TÓPICO 8 AQUI]\n",
+        "    *   Tópico 5: Descrição: Este tópico se concentra em termos relacionados a \"declaração\" (possivelmente imposto de renda), \"INSS\", \"aposentadoria\", \"segurado\" e \"benefício\", indicando uma discussão sobre previdência social e direitos do trabalhador.\n",
+        "Consistência Semântica: Consistente. Os termos estão fortemente ligados a temas de direitos trabalhistas, previdência e impostos.\n",
+        "    *   Tópico 6: O tópico aborda o setor aéreo, com \"aeroporto\", \"tarifa\", \"passageiro\", \"milhão\" (possivelmente relacionado a valores ou números de passageiros), e menções a cidades como \"Fortaleza\" e \"Salvador\", além de \"Belo Monte\", que pode ser uma referência externa ou um ruído. \"Voo\" e \"greve\" também aparecem.\n",
+        "Consistência Semântica: Consistente, embora \"Belo Monte\" pareça um pouco fora do contexto predominante de aviação, a maioria dos termos se alinha bem com o tema de transporte aéreo e seus desafios (como greves e tarifas).\n",
+        "    *   Tópico 7: Descrição: Este tópico gira em torno de \"análise conjuntural\", \"planejamento econômico\" e menções a instituições como \"Centro Brasileiro\" (CEBRAP) e \"Folha\" (Folha de S.Paulo), sugerindo debates e estudos sobre a economia brasileira.\n",
+        "Consistência Semântica: Consistente. Os termos indicam um foco em análise e discussão econômica, com referências a centros de pesquisa e veículos de comunicação.\n",
+        "    *   Tópico 8: Descrição: O tópico se refere ao \"governo\", \"proposta\", \"dizer\" e \"afirmar\", com referências a figuras políticas como \"senador\", \"presidente\" e \"deputado\", sugerindo discussões sobre o cenário político e legislativo.\n",
+        "Consistência Semântica: Consistente. Os termos formam um grupo coeso relacionado a política, governo e poder legislativo.\n",
         "    *   Tópico 9: [ESCREVA A DESCRIÇÃO DO TÓPICO 9 AQUI]\n",
         "\n",
         "**Criar modelos baseados em Word Embedding**\n",
