--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -4209,18 +4209,21 @@
         "*   **17. Escreva brevemente uma descrição para cada tópico extraído. Indique se você considera o tópico extraído semanticamente consistente ou não. **\n",
         "    *   Tópico 1: parece focar na relação entre usuários, serviços online, empresas e o mercado digital. Termos como \"usuário\", \"serviço\", \"mídia\", \"empresa\", \"aplicativo\", \"venda\" e \"Facebook\" são proeminentes. Os termos se agrupam bem em torno do tema de interação digital e negócios, me parece consistente\n",
         "    \n",
-        "    *   Tópico 2: aborda conceitos econômicos, com ênfase em \"renda fixa\", \"fundo de renda\", \"taxa básica de juros\" (Selic) e associações financeiras (\"Anefac\"). Parece consistente, já que os termos são claramente relacionados ao setor financeiro e investimentos\n",
+        "    *   Tópico 2: aborda conceitos econômicos, com ênfase em \"renda fixa\", \"fundo de renda\", \"taxa básica de juros\" (Selic) e associações financeiras (\"Anefac\"). Parece consistente, já que os termos são claramente relacionados ao setor financeiro e investimentos.\n",
+        "\n",
         "    *   Tópico 3: Este tópico parece tratar de discussões sobre o papel do \"governo\" e das \"empresas\" no \"mercado\", incluindo termos como \"dizer\", \"haver\" e \"ser\", que podem indicar análises ou debates sobre esses atores. Não me parece ser tão consistente já que as palavras não remetem há um assunto bem claramente.\n",
+        "\n",
         "    *   Tópico 4: Ficou vazio\n",
-        "    *   Tópico 5: Descrição: Este tópico se concentra em termos relacionados a \"declaração\" (possivelmente imposto de renda), \"INSS\", \"aposentadoria\", \"segurado\" e \"benefício\", indicando uma discussão sobre previdência social e direitos do trabalhador.\n",
-        "Consistência Semântica: Consistente. Os termos estão fortemente ligados a temas de direitos trabalhistas, previdência e impostos.\n",
-        "    *   Tópico 6: O tópico aborda o setor aéreo, com \"aeroporto\", \"tarifa\", \"passageiro\", \"milhão\" (possivelmente relacionado a valores ou números de passageiros), e menções a cidades como \"Fortaleza\" e \"Salvador\", além de \"Belo Monte\", que pode ser uma referência externa ou um ruído. \"Voo\" e \"greve\" também aparecem.\n",
-        "Consistência Semântica: Consistente, embora \"Belo Monte\" pareça um pouco fora do contexto predominante de aviação, a maioria dos termos se alinha bem com o tema de transporte aéreo e seus desafios (como greves e tarifas).\n",
-        "    *   Tópico 7: Descrição: Este tópico gira em torno de \"análise conjuntural\", \"planejamento econômico\" e menções a instituições como \"Centro Brasileiro\" (CEBRAP) e \"Folha\" (Folha de S.Paulo), sugerindo debates e estudos sobre a economia brasileira.\n",
-        "Consistência Semântica: Consistente. Os termos indicam um foco em análise e discussão econômica, com referências a centros de pesquisa e veículos de comunicação.\n",
-        "    *   Tópico 8: Descrição: O tópico se refere ao \"governo\", \"proposta\", \"dizer\" e \"afirmar\", com referências a figuras políticas como \"senador\", \"presidente\" e \"deputado\", sugerindo discussões sobre o cenário político e legislativo.\n",
-        "Consistência Semântica: Consistente. Os termos formam um grupo coeso relacionado a política, governo e poder legislativo.\n",
-        "    *   Tópico 9: [ESCREVA A DESCRIÇÃO DO TÓPICO 9 AQUI]\n",
+        "\n",
+        "    *   Tópico 5: O tópico parece concentrar informações sobre imposto de renda e previdência (INSS). Talvez poderia ser divido em dois, um sobre cada assunto, por isso não achei consistente.\n",
+        "\n",
+        "    *   Tópico 6: O tópico aborda o setor aéreo, com \"aeroporto\", \"tarifa\", \"passageiro\", \"milhão\" (possivelmente relacionado a valores ou números de passageiros), e menções a cidades como \"Fortaleza\" e \"Salvador\", além de \"Belo Monte\", que pode ser uma referência externa ou um ruído. Parece consistente, tratando do mesmo assunto.\n",
+        "\n",
+        "    *   Tópico 7: Descrição: Este tópico gira em torno de \"análise conjuntural\", \"planejamento econômico\" e menções a instituições como \"Centro Brasileiro\" (CEBRAP) e \"Folha\" (Folha de S.Paulo), sugerindo debates e estudos sobre a economia brasileira.Bem consistente. Os termos indicam um foco em análise e discussão econômica, com referências a centros de pesquisa e veículos de comunicação.\n",
+        "\n",
+        "    *   Tópico 8: Descrição: O tópico se refere ao \"governo\", \"proposta\", \"dizer\" e \"afirmar\", com referências a figuras políticas como \"senador\", \"presidente\" e \"deputado\", sugerindo discussões sobre o cenário político e legislativo. Parece consistente\n",
+        "\n",
+        "    *   Tópico 9: Não apareceu\n",
         "\n",
         "**Criar modelos baseados em Word Embedding**\n",
         "\n",
