--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -3032,6 +3032,35 @@
       "cell_type": "code",
       "source": [
         "# #Célula 10\n",
+        "# import re\n",
+        "# from nltk.tokenize import word_tokenize\n",
+        "# from nltk.stem import RSLPStemmer\n",
+        "# from nltk.corpus import stopwords\n",
+        "\n",
+        "# stemmer = RSLPStemmer()\n",
+        "\n",
+        "# def tokenize(text: str) -> List:\n",
+        "#   \"\"\"\n",
+        "#   Function for tokenizing using `nltk.tokenize.word_tokenize`\n",
+        "\n",
+        "#   Returns:\n",
+        "#     - A list of stemmed tokens (`nltk.stem.RSLPStemmer`)\n",
+        "#     IMPORTANT: Only tokens with alphabetic\n",
+        "#                characters will be returned.\n",
+        "#   \"\"\"\n",
+        "#   #escreva seu código aqui\n",
+        "#   text = text.lower()\n",
+        "#   text = re.sub(r'[^a-z\\s]', '', text)\n",
+        "#   tokens = word_tokenize(text, language='portuguese')\n",
+        "#   custom_stop_words = set(stopwords.words('portuguese'))\n",
+        "#   cleaned_tokens = [token for token in tokens if token not in custom_stop_words]\n",
+        "#   cleaned_tokens = [token for token in cleaned_tokens if len(token) > 2]\n",
+        "#   cleaned_tokens = [stemmer.stem(word) for word in cleaned_tokens]\n",
+        "#   return ' '.join(cleaned_tokens)\n",
+        "\n",
+        "# news_2016.loc[:, 'nltk_tokens'] = news_2016.text.progress_map(tokenize)\n",
+        "# CÉLULA 10\n",
+        "\n",
         "import re\n",
         "from tqdm.auto import tqdm\n",
         "from nltk.tokenize import word_tokenize\n",
